fix: fix top-level menu layout bug

--- a/src/components/core/layouts/art-menus/art-sidebar-menu/style.scss
+++ b/src/components/core/layouts/art-menus/art-sidebar-menu/style.scss
@@ -10,6 +10,10 @@
   user-select: none;
   scrollbar-width: none;
 
+  &.no-border {
+    border-right: none !important;
+  }
+
   .dual-menu-left {
     position: relative;
     width: 80px;
